--- a/elsa/Dockerfile
+++ b/elsa/Dockerfile
@@ -6,10 +6,10 @@ ENV DEBIAN_FRONTEND=noninteractive
 RUN apt-get update && apt-get install -y \
     wget sudo git make gcc g++ python3.11 python3.11-dev python3-pip\
     &&update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.11 1\
-    &&python3 -m pip install numpy h5py flask pandas\
     &&wget https://developer.download.nvidia.com/compute/cuda/repos/ubuntu2204/x86_64/cuda-keyring_1.1-1_all.deb\
     &&sudo dpkg -i cuda-keyring_1.1-1_all.deb\
     &&apt-get update && apt-get install -y cuda
+RUN python3 -m pip install numpy h5py flask pandas graphistry
 
 WORKDIR /home/liy/packages
 RUN git config --global user.name "yanggaoli"\
@@ -40,8 +40,7 @@ CMD ["python3", "py_NET.py"]
 
 
 
-# docker build -t elsa_server:1.0 .
-# docker run --gpus all elsa_server:1.0
+# docker build -t elsa_server:1.0 .&&docker run --gpus all elsa_server:1.0
 # docker run --gpus all -it --name my-ubuntu-container elsa_server:1.0
 # docker login
 # docker tag elsa_server:1.0 bingwujiayin/elsa_server:1.0
